# rust_scicrate

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: error.rs  lib.rs
src/integrate/: mod.rs
src/linalg/: mod.rs
src/optimize/: mod.rs
src/stats/: mod.rs
tests/: test_integrate.rs  test_linalg.rs  test_optimize.rs  test_stats.rs
